--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PUERTO=8080
+PORT=8080
 BASEDATOS=mongodb+srv://santiagocorrea:admin123@cluster0.0uxes.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
